--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
         border-bottom: 1px solid var(--border-color);
     }
     .logo {
-        width: 36px; height: 36px; border-radius: 8px;
-        background: linear-gradient(135deg, var(--accent), #a855f7);
-        display: grid; place-items: center;
-        color: white; font-weight: bold; font-size: 20px;
+    width: 36px; height: 36px; border-radius: 8px;
+    background-image: url('https://raw.githubusercontent.com/Sevmamra/nedits-ai/main/logo/logo.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     }
     .brand-name { font-weight: 600; font-size: 18px; }
 
@@ -195,7 +196,13 @@
     .bubble.user { justify-content: flex-end; }
     
     .avatar { width: 36px; height: 36px; border-radius: 8px; display: grid; place-items: center; font-weight: 600; flex-shrink: 0; }
-    .avatar.ai { background: linear-gradient(135deg, var(--accent), #a855f7); color: white; }
+    .avatar.ai {
+    background-image: url('https://raw.githubusercontent.com/Sevmamra/nedits-ai/logo.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: transparent; /* पुराना रंग हटाने के लिए */
+}
     .avatar.user { background: var(--panel); border: 1px solid var(--border-color); }
     
     .msg { padding: 12px 16px; border-radius: 12px; max-width: 90%; line-height: 1.6; }
@@ -266,7 +273,7 @@
     <div class="mobile-overlay" id="mobile-overlay"></div>
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <div class="logo">N</div>
+            <div class="logo"></div>
             <span class="brand-name">Nedits AI</span>
         </div>
         <button class="new-chat-btn" id="new-chat-btn">
@@ -285,7 +292,7 @@
         <div class="chat-container" id="chat-container">
             <div class="message-list" id="message-list">
                 <div class="empty-state" id="empty-state">
-                    <div class="logo">N</div>
+                    <div class="logo"></div>
                     <h1>Nedits AI</h1>
                     <p>Your official assistant. How can I help you today?</p>
                     <div class="prompt-suggestions">
