--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     }
     .logo {
     width: 36px; height: 36px; border-radius: 8px;
-    background-image: url('https://raw.githubusercontent.com/Sevmamra/nedits-ai/main/logo/logo.png');
+    background-image: url('https://ibb.co/NdKWS7XJ');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -196,7 +196,7 @@
     
     .avatar { width: 36px; height: 36px; border-radius: 8px; display: grid; place-items: center; font-weight: 600; flex-shrink: 0; }
     .avatar.ai {
-        background-image: url('https://raw.githubusercontent.com/Sevmamra/nedits-ai/main/logo/logo.png');
+        background-image: url('https://ibb.co/NdKWS7XJ');
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
